--- a/prometheus/deployment.yml
+++ b/prometheus/deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: prometheus-deployment
+  name: prometheus
   namespace: monitoring
 spec:
   replicas: 1
@@ -25,6 +25,11 @@ spec:
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/
+            - name: prometheus-secret-volume
+              mountPath: /etc/prometheus-secret/
+              readOnly: true
+            # - name: prometheus-really-secret-volume
+            #   mountPath: /etc/prometheus-really-secret/
             - name: prometheus-storage-volume
               mountPath: /prometheus/
       volumes:
@@ -32,6 +37,18 @@ spec:
           configMap:
             defaultMode: 420
             name: prometheus-server-conf
+        - name: prometheus-secret-volume
+          projected:
+            sources:
+              - secret:
+                  name: prom-server
+                  items:
+                  - key: tls.key
+                    path: prom-server.key
+                  - key: tls.crt
+                    path: prom-server.crt
+              - secret:
+                  name: ca-crt
 
         - name: prometheus-storage-volume
           persistentVolumeClaim:
